--- a/templates/rofi.mustache
+++ b/templates/rofi.mustache
@@ -1,5 +1,5 @@
 ! Rofi Xresources template
-! author: Abraham White <abelincoln.white>
+! author: Abraham White <abelincoln.white@gmail.com>
 rofi.color-normal: #{{base00-hex}},#{{base05-hex}},#{{base00-hex}},#{{base0C-hex}},#{{base00-hex}}
 rofi.color-urgent: #{{base00-hex}},#{{base01-hex}},#{{base00-hex}},#{{base09-hex}},#{{base00-hex}}
 rofi.color-active: #{{base00-hex}},#{{base06-hex}},#{{base00-hex}},#{{base0E-hex}},#{{base00-hex}}
